--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -23,10 +23,10 @@ jobs:
         run: pip install -r requirements.txt
         
       - name: Pull data and model
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: dvc pull -r read-write
+        # env:
+        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: dvc pull
 
       - name: Run tests
         run: pytest 
@@ -39,7 +39,7 @@ jobs:
     
       - name: Create CML report
         env:
-          REPO_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Add the metrics to the report
           dvc metrics show --show-md >> report.md
