Add  GDRIVE_CREDENTIALS_DATA in github action

--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -23,8 +23,9 @@ jobs:
         run: pip install -r requirements.txt
         
       - name: Pull data and model
-        # env:
-        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        env:
+          GDRIVE_CREDENTIALS_DATA : ${{ secrets.GDRIVE_CREDENTIALS_DATA }} 
+          # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: dvc pull
 
