Add  GDRIVE_CREDENTIALS_DATA in github action

--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -24,7 +24,7 @@ jobs:
         
       - name: Pull data and model
         env:
-          GDRIVE_CREDENTIALS_DATA : ${{ secrets.GDRIVE_CREDENTIALS_DATA }} 
+          GDRIVE_CREDENTIALS_DATA : /home/sunt/.cache/pydrive2fs/710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com/default.json 
           # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: dvc pull
