Add REPO_TOKEN in github action

--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -40,7 +40,7 @@ jobs:
     
       - name: Create CML report
         env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO_TOKEN: ${{ secrets.token }}
         run: |
           # Add the metrics to the report
           dvc metrics show --show-md >> report.md
