Add GDRIVE_CREDENTIALS_DATA for public github action

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,9 +25,10 @@ jobs:
 
       - name: Download model
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: dvc pull model/svm -r read-write
+          GDRIVE_CREDENTIALS_DATA : ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+          # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: dvc pull model/svm
 
       - name: Setup flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
